<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGray"
           >
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:paddingBottom="5dp"
                android:src="@drawable/ic_dehaze_black_24dp"
                />
    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/reqborder"
            android:layout_marginTop="40dp" >
            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:text="@string/requisition"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp" />
            <TextView

                android:id="@+id/TextView01"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle2"
                android:layout_marginTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:text="@string/no1"
                android:textAlignment="center"
                android:layout_marginStart="30dp"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:background="@drawable/textline"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="60dp"
                android:layout_marginStart="50dp" />

            <TextView

                android:id="@+id/TextView03"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle2"
                android:layout_marginTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="70dp"
                android:text="@string/no2"
                android:textAlignment="center"
                android:layout_marginStart="80dp"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:background="@drawable/textline"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="60dp"
                android:layout_marginStart="100dp" />

            <TextView

                android:id="@+id/TextView04"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle"
                android:layout_marginTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="130dp"
                android:text="@string/no3"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:layout_marginStart="130dp"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:background="@drawable/textline"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="60dp"
                android:layout_marginStart="150dp" />
            <TextView

                android:id="@+id/TextView05"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle2"
                android:layout_marginTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="180dp"
                android:text="@string/no4"
                android:textAlignment="center"
                android:layout_marginStart="180dp"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:background="@drawable/textline"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="60dp"
                android:layout_marginStart="200dp" />
            <TextView

                android:id="@+id/TextView06"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle2"
                android:layout_marginTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="230dp"
                android:text="@string/no5"
                android:textAlignment="center"
                android:layout_marginStart="230dp"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:background="@drawable/textline"
                android:layout_marginLeft="250dp"
                android:layout_marginTop="60dp"
                android:layout_marginStart="250dp" />
            <TextView

                android:id="@+id/TextView02"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle2"
                android:layout_marginTop="60dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="280dp"
                android:text="@string/no6"
                android:textAlignment="center"
                android:layout_marginStart="280dp"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="150dp"
            android:background="@color/colorBack">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:paddingTop="20dp"
                android:text="@string/attibute"
                android:textColor="@color/coloratt"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:paddingTop="10dp"
                android:text="@string/sentence"
                android:textColor="@color/colorsentence"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/image2"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/todo1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attachfile"
                android:textColor="@color/coloratt"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:paddingTop="60dp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="221dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginTop="300dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doc"
                android:textSize="10sp"
                android:textColor="@color/colorSave"/>
            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/KB"
                android:textSize="10sp"
                android:layout_marginLeft="135dp"
                android:paddingLeft="10dp"
                android:textColor="@color/colorSave"/>


        </RelativeLayout>
            <RelativeLayout
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:layout_marginTop="333dp"
                android:layout_marginLeft="30dp"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shorttext"
                    android:textSize="10sp"
                    android:textColor="@color/colorsentence"/>
            </RelativeLayout>
        <RelativeLayout
            android:layout_width="78dp"
            android:layout_height="67dp"
            android:layout_marginStart="250dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="300dp"
            android:background="@drawable/border"
            android:backgroundTint="@color/colorBlue">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:textSize="10sp"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:textColor="@color/colorupload"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:background="@color/coloralert"
            android:layout_marginTop="367dp"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@color/colorred"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_warning_black_24dp"
                android:layout_marginStart="10dp"

                app:tint="@color/colorupload"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/des"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorred"
                android:textSize="8sp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_marginBottom="30dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Save"
                android:textStyle="bold"
                android:textColor="@color/colorSave"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:paddingBottom="30dp"
                android:layout_marginTop="225dp"
                android:background="@drawable/bottomborder"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:text="NEXT"
                android:textSize="10sp"
                app:rippleColor="@color/colorBlue"
                app:iconSize="15dp"
                android:layout_marginStart="300dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="223dp"
                app:icon="@drawable/ic_arrow_forward_black_24dp"
                android:backgroundTint="@color/colorBlue"
                app:iconGravity="end"
                app:cornerRadius="20dp"

                />


        </RelativeLayout>





</RelativeLayout>
</RelativeLayout>